rnsc/test_data/integration/error/parser/type_hints/long/missing_operand_recovers.rns
.class @long
unexpected_token ; <- this error should be reported as well
